--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 /sesiones/JavaApplication7/nbproject/private/
 /sesiones/CONCEPTOSBASICOSPOO2210.NEW/nbproject/private/
 /sesiones/CONCEPTOSBASICOSPOO2210.NEW/build/
+/sesiones/ReutilizacionDeCodigo/nbproject/private/
+/sesiones/ReutilizacionDeCodigo/build/
+/sesiones/ReutilizacionDeCodigo/dist/
+/sesiones/ejemplo14marzo/nbproject/private/
+/sesiones/Libro/nbproject/private/
+/sesiones/Libro/build/
+/sesiones/TAREA1/nbproject/private/
+/sesiones/TAREA1/build/
+/sesiones/TAREA1/dist/
+/sesiones/Tarea1JAVA/nbproject/private/
+/sesiones/prueba sout/nbproject/private/
+/sesiones/prueba sout/dist/
+/sesiones/prueba sout/build/
+/sesiones/Tarea1JAVA/build/
+/sesiones/Tarea1JAVA/dist/
+/tareas/Tarea1JAVA/nbproject/private/
+/tareas/Tarea1JAVA/build/
+/sesiones/JavaBasico/nbproject/private/
+/sesiones/JavaBasico/build/
+/sesiones/JavaBasico/dist/
+/sesiones/Cuentahabiente/nbproject/private/
+/sesiones/PruebaEjemplo/nbproject/private/
+/sesiones/PruebaEjemplo/build/
+/sesiones/PruebaEjemplo/dist/
