--- a/sesiones/JavaBasico/nbproject/project.properties
+++ b/sesiones/JavaBasico/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaApplication7.jar
+dist.jar=${dist.dir}/JavaBasico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/JavaApplication7
+dist.jlink.output=${dist.jlink.dir}/JavaBasico
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=JavaApplication7
-main.class=javaapplication7.JavaApplication7
+jlink.launcher.name=JavaBasico
+main.class=javabasico.JavaBasico
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
