No se como subir un solo archivo

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@
 /sesiones/PruebaEjemplo/nbproject/private/
 /sesiones/PruebaEjemplo/build/
 /sesiones/PruebaEjemplo/dist/
+/sesiones/JavaBasico2210parte2/nbproject/private/
+/sesiones/JavaBasico2210parte2/build/
+/sesiones/JavaBasico2210parte2/dist/
+/sesiones/InterfacesUsuario2210/nbproject/private/
+/sesiones/InterfacesUsuario2210/build/
+/sesiones/InterfacesUsuario2210/dist/
